   * Added "border" parameter to [terrain_mask] that overlays on the border
     in addition to the playable map area. The used mask must have the same
     border_size as the map (i.e. currently 1), else this will be ignored.
   * Restore x1, y1, x2, and y2 after events fired from events.
   * WML variable expansion can be used inside story [part] tags
     (feature request #10398).
 * Miscellaneous and bug fixes:
   * fixed addon update version logic (patch #1110)
   * Fixed a flaw which caused sound sources to be forgotten after saving
     and loading a game (bug #11495).
   * fixed crashes on move_unit_fake with unit types which cannot move
     over terrains that are part of the path
   * Generic units get unique non-underlying ids again (bug #12558).

Version 1.5.5:
 * Campaigns:
   * A new experimental gold carryover system is now supported in Heir to the
     Throne, Sceptre of Fire and Descent into Darkness: the choice appears in
     the difficulty level menu when starting the campaign.
   * Son of the Black Eye:
     * New portraits for Al'Brock, Flar'Tar and Howgarth.
   * Two Brothers:
     * Rewrite to include story screens by Stefan
     * Improved scenario texts and dialogs
 * Editor2:
   * Added editor-specific settings dialog
   * Lighting setting similar to that of old editor, with presets from a
     (hardcoded) list of time_of_days. Can change the settings and see the
     effects without having to close the settings dialog. The preferences
     are shared with the old editor (FR #11408 / Debian bug #458305).
   * Auto update transitions option is stored in the preferences
   * Removed map flipping
   * Added clipboard flipping
   * Command line: added "--load FILE" support to "-e" (FR #12299)
 * Graphics:
   * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
 * Music and sound effects:
   * New music track "Heroes Rite" by Doug Kaufman.
   * New music track "The Deep Path" by Gianmarco Leone.
 * Language and i18n: